# Narrate

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  GLOSSARY.md  README.md  REFACTORING_GUIDE.md  build.ps1  build.sh  clean.ps1  run.ps1  run.sh  test.ps1  test.sh
Source/: EditorView.cpp  EditorView.h  FeatureRegistry.h  HighlightSettings.h  KaraokeRenderStrategy.cpp  KaraokeRenderStrategy.h  NarrateConfig.h  NarrateDataModel.cpp  NarrateDataModel.h  NarrateLogger.h  NarrateLookAndFeel.cpp  NarrateLookAndFeel.h  OperationResult.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_New.cpp  RenderStrategy.h  RunningView.cpp  RunningView.h  ScrollingRenderStrategy.cpp  ScrollingRenderStrategy.h  TeleprompterRenderStrategy.cpp  TeleprompterRenderStrategy.h  TimelineEventManager.cpp  TimelineEventManager.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Console/: NarrateConsole.cpp
Source/Features/: AudioPlaybackFeature.h  DawSyncFeature.h  ExportFeature.h  FeatureFactory.h  ImportFeature.h  NoOpAudioPlayback.h  NoOpDawSyncFeature.h  NoOpExportFeature.h  NoOpImportFeature.h  PluginDawSyncFeature.cpp  PluginDawSyncFeature.h  StandaloneAudioPlayback.cpp  StandaloneAudioPlayback.h  StandaloneExportFeature.cpp  StandaloneExportFeature.h  StandaloneImportFeature.cpp  StandaloneImportFeature.h
Source/UI/: AudioPlaybackPanel.cpp  AudioPlaybackPanel.h  DawSyncPanel.cpp  DawSyncPanel.h  ExportPanel.cpp  ExportPanel.h  ProgressWindow.cpp  ProgressWindow.h  SummaryDialog.cpp  SummaryDialog.h  ToastNotification.cpp  ToastNotification.h
Tests/: TestMain.cpp
Tests/Unit/: ImportFeatureTests.cpp  NarrateDataModelTests.cpp
examples/: README.md  cheech.and.chongs.animated.movie.2013.720p.bluray.x264.srt  sample.json  sample.srt  sample.txt  sample.vtt
